--- a/css/generalMob.css
+++ b/css/generalMob.css
@@ -15,6 +15,7 @@
 :root {
     /* colors */
     --white: #F5F6FF;
+    --whiteB: #f1f2ff;
 
     --medGrey: #EDEFF7;
     --strongGrey: #D9D9D9;
@@ -60,15 +61,14 @@ body, html {
 
 /* general settings in doc */
 #mHeader, #mFooter { /* main header */
-    position: absolute;
+    font-family: var(--sFont);
+
+    background-color: var(--white);
+    box-shadow: 0.5px 0.5px 2px #18181811;
+
     justify-content: space-between;
 
-    font-family: var(--sFont);
-    background-color: var(--medGrey);
-
     width: 100%;
-
-    box-shadow: 0.5px 0.5px 2px #18181811;
 }
 
 body {
@@ -85,7 +85,6 @@ body {
 a {
     color: var(--black);
     text-decoration: none;
-    transition: color 350ms;
 }
 
 a:hover {
@@ -106,10 +105,9 @@ a:hover {
 
 /* header */
 #mHeader {
+    position: fixed;
     top: 0;
-
-    min-height: 66px;
-    height: 8vh;
+    height: 55px;
 }
 
 
@@ -118,8 +116,8 @@ a:hover {
 }
 
 #sTitle { /* site title */
-    font-weight: 500;
     font-size: 40px;
+    font-weight: 500;
 }
 
 #mIcon { /* menu icon */
@@ -134,10 +132,9 @@ a:hover {
 
 #mIconBox {
     display: flex;
-
-    min-height: 66px;
-    height: 8vh;
     justify-content: center;
+
+    height: 55px;
 } 
 
 
@@ -146,10 +143,10 @@ a:hover {
 /* before touch */
 #mobMenu-sec {
     display: flex;
-    position: absolute;
-    right: 0%;
-
     align-self: flex-start;
+
+    position: absolute;
+    right: 0;
 }
 
 #mobMenu {
@@ -157,13 +154,12 @@ a:hover {
     list-style-type: none;
 }
 
-.mArea {
+.mArea { /* menu area */
     display: flex;
     align-items: center;
     
+    height: 60px;
     width: 100%;
-    height: 10vh;
-    max-height: 60px;
 }
 
 .mArea:hover {
@@ -181,7 +177,7 @@ a:hover {
 }
 
 .mArea > p {
-    font-size: min(16px, 3.5vw);
+    font-size: min(15px, 3vw);
     margin: 0 25px 0 0;
 }
 
@@ -192,11 +188,10 @@ a:hover {
 }
 
 .mmActive#mobMenu-sec {
-    background-color: var(--white);
+    background-color: var(--whiteB);
+    flex-direction: column;
 
     height: 100vh;
-    
-    flex-direction: column;
 
     width: 60%;
     max-width: 250px;
@@ -206,38 +201,30 @@ a:hover {
 
 
 /* main content */
-.amSection { /* a main section (mobile version) */
+.amSection { /* a main section */
+    position: relative;
     background-color: var(--medGrey);
     
-    /* alterações no amSection afetam mBlockLogin(login) */
-    height: 75%;
-    max-height: 600px;
-
-    width: 80%;
-    max-width: 1000px;
-
-    margin-top: 5vh;
-    
+    margin-top: 5px;
     box-shadow: 0.5px 4px 4px #2222223f;
 }
 
-
 /* title */
 #photoE-title {
-    font: normal 48px var(--sFont);
+    font: normal min(48px, 10vw) var(--sFont);
     
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 #photoE-E {
     color: var(--red);
 
-    font-size: 64px;
+    font-size: min(64px, 15vw);
     font-weight: 600;
 }
 
 #slog { /* slogan */
-    font: normal 14px var(--sFont);
+    font: normal min(12px, 5vw) var(--sFont);
     font-weight: 400;
 
     transform: translateY(-25%);
@@ -248,10 +235,10 @@ a:hover {
 
 /* footer */
 #mFooter {
+    position: absolute;
     font-size: min(12px, 4vw);
 
-    min-height: 50px;
-    height: 5vh;
+    min-height: 40px;
 
     bottom: 0;
     box-shadow: -0.5px -0.5px 2px #18181810;
@@ -282,6 +269,31 @@ a:hover {
     margin: 0 25px;
 }
 
+
+
+
+/* Resoluções com alturas muito pequenas */
+@media screen and (max-height: 470px) {
+    /* main content */
+    #mCon {
+        display: flex;
+        align-items: start;
+
+        margin: 65px auto 0px 0px;
+        
+        min-height: 320px;
+        max-height: 400px;
+    }
+
+
+
+
+    /* main footer */
+    #mFooter {
+        position: static;
+        margin-top: 50px;
+    }
+}
 
 
 
