--- a/css/loginMqueries.css
+++ b/css/loginMqueries.css
@@ -8,41 +8,67 @@
 */
 
 
-/* medium or bigger screen */
-@media screen and (min-width: 768px) {
-    /* flower image */
-    .amSection::before {
-        background-image: url(../media/img/flow.png);
-        background-size: 577px 433px;
+/* medium or big screens */
+@media screen and (min-width: 768px) {   
+    /* main content */
+    #mCon::before {
+        content:"";
+        position: absolute;
         
-        max-width: 577px;
-        max-height: 433px;
-
-        background-position: 0 0;
-
-        right: 50%;
-        transform:translate(50%);
+        background-image: url(../media/img/mBg-incomplete.jpg);
+        background-size: cover;
+        background-attachment: fixed;
         
-        opacity: 1;
+        width: 100%;
+        height: 100%;
+
+        z-index: -1;
+        opacity: 0.15;
     }
 
 
+    /* main block */
+    #photoE-title, #slog {
+        text-align: center;
+    } 
 
+    .amSection {
+        min-width: 600px;
+        width: 60vw;
+        max-width: 900px;
+    }
+    
+    #mBlockLogin {
+        width: 80%;
+        max-width: 600px;
 
-    /* form */
-    /* form sections */
-    #loginF > section:nth-of-type(3) {
-        justify-content: end;
+        padding: 0px 0px 10vh 0px;
     }
 
 
     /* form buttons */
-    #l-confirm, #l-signA {
-        width: 25%;
+    #l-confirm, #l-sign {
+        width: 49%;
     }
 
-    #l-signA {
-        margin-right: 5px;
+    #l-sign {
+        text-align: left;
+        margin-right: 2%;
+        padding-left: 15px;
     }
 
+    #l-confirm {
+        text-align: right;
+        padding-right: 15px;
+    }
+
+    #logEmail, #logPass {
+        /* continueeee
+        continueeee
+        continueeee
+        continueeee
+        continueeee */
+    }
 }
+
+
