--- a/css/loginMqueries.css
+++ b/css/loginMqueries.css
@@ -26,24 +26,25 @@
         opacity: 0.15;
     }
 
-
-    /* main block */
     #photoE-title, #slog {
         text-align: center;
+        width: 100%;
     } 
 
     .amSection {
         min-width: 600px;
         width: 60vw;
         max-width: 900px;
+
+        max-height: 325px;
+        padding: 5vh 0px 15vh 0px;
     }
     
     #mBlockLogin {
         width: 80%;
-        max-width: 600px;
-
-        padding: 0px 0px 10vh 0px;
+        max-width: 500px;
     }
+    
 
 
     /* form buttons */
@@ -63,11 +64,7 @@
     }
 
     #logEmail, #logPass {
-        /* continueeee
-        continueeee
-        continueeee
-        continueeee
-        continueeee */
+        height: 35px;
     }
 }
 
