--- a/css/c-logpage/loginMqueries.css
+++ b/css/c-logpage/loginMqueries.css
@@ -18,9 +18,10 @@
         background-image: url(../media/img/mBg-incomplete.jpg);
         background-size: cover;
         background-attachment: fixed;
+        background-repeat: no-repeat;
         
         width: 100%;
-        height: 100%;
+        height: 100vh;
 
         z-index: -1;
         opacity: 0.15;
@@ -34,7 +35,7 @@
     .amSection {
         min-width: 600px;
         width: 50vw;
-        max-width: 1000px;
+        max-width: 900px;
 
         padding: 5vh 0px 15vh 0px;
     }
