--- a/css/c-logpage/loginMqueries.css
+++ b/css/c-logpage/loginMqueries.css
@@ -1,5 +1,4 @@
 @charset "UTF_8";
-
 /* utilizando as medidas
     320px -- 768px | mobile
     768px -- 992px | tablet
@@ -7,24 +6,11 @@
     +1200px | pc / tv
 */
 
-
 /* medium or big screens */
 @media screen and (min-width: 768px) {   
     /* main content */
     #mCon::before {
-        content:"";
-        position: absolute;
-        
-        background-image: url(../media/img/mBg-incomplete.jpg);
-        background-size: cover;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-        
-        width: 100%;
-        height: 100vh;
-
-        z-index: -1;
-        opacity: 0.15;
+        background-image: url(../../media/img/mBg-incomplete.jpg);
     }
 
     #photoE-title, #slog {
@@ -44,7 +30,8 @@
         width: 80%;
         max-width: 500px;
     }
-    
+
+
 
 
     /* form buttons */
