--- a/css/generalMob.css
+++ b/css/generalMob.css
@@ -42,10 +42,17 @@
 
 body, html {
     width: 100%;
-    height: 100%;
 }
 
+html {
+    height: 100vh;
+    z-index: ;
+}
 
+body {
+    height: 100%;
+    z-index: -1;
+}
 
 
 /* reusable classes */
@@ -81,10 +88,11 @@ body {
 }
 
 #mCon { /* main content */
-    width: 100%;
-    height: 100%;
-
-    justify-content: center;
+    position: relative;
+    margin-top: 55px;
+    
+    height: calc(100vh - 95px);
+    min-height: 400px;
 }
 
 a {
@@ -213,7 +221,6 @@ a:hover {
     font-size: min(12px, 4vw);
 
     min-height: 40px;
-
     box-shadow: -0.5px -0.5px 2px #18181810;
 }
 
@@ -242,14 +249,3 @@ a:hover {
     margin: 0 25px;
 }
 
-/* Resoluções com alturas muito pequenas */
-@media screen and (max-height: 500px) {
-    #mCon {
-        min-height: 100vh;
-        padding: 5vh 0px;
-    }
-
-    #mFooter {
-        position: static;
-    }
-}
